--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,26 +1,157 @@
 .home {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  width: 100%;
   padding: 1.5rem;
   background: url(../assets/home/background-home-mobile.jpg) no-repeat center;
   background-size: cover;
 }
 
+main {
+  margin-top: 3rem;
+  text-align: center;
+}
+
+main h1 {
+  margin: 0;
+  letter-spacing: 0.17rem;
+  font-size: 16px;
+  color: hsl(0, 0%, 100%);
+  font-weight: normal;
+  font-family: "Barlow Condensed", sans-serif;
+  text-transform: uppercase;
+}
+
+main h2 {
+  margin: 2.8rem 0 1.9rem 0;
+  font-size: 80px;
+  color: hsl(0, 0%, 100%);
+  font-weight: normal;
+  font-family: "Bellefair", sans-serif;
+  text-transform: uppercase;
+}
+
+main p {
+  margin: 0;
+  font-size: 15px;
+  line-height: 1.6rem;
+  color: hsl(0, 0%, 100%);
+  font-family: "Barlow", sans-serif;
+}
+
+.explore {
+  margin: 5.4rem auto 3rem;
+  height: 9.4rem;
+  width: 9.4rem;
+  border-radius: 50%;
+  background-color: hsl(0, 0%, 100%);
+  background-clip: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.explore:hover {
+  cursor: pointer;
+}
+
+.explore h3 {
+  margin: 0;
+  font-size: 20px;
+  letter-spacing: 0.0625rem;
+  color: hsl(230, 35%, 7%);
+  text-transform: uppercase;
+  font-weight: normal;
+  font-family: "Bellefair", sans-serif;
+}
+
 @media (min-width: 768px) {
   .home {
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    width: 100%;
     padding: 0;
     background: url(../assets/home/background-home-tablet.jpg) no-repeat center;
     background-size: cover;
+  }
+
+  main {
+    margin: 0;
+    padding: 6.6rem 10rem 6rem;
+  }
+
+  main h1 {
+    font-size: 20px;
+  }
+
+  main h2 {
+    margin: 5rem 0 1rem 0;
+    font-size: 150px;
+  }
+
+  main p {
+    font-size: 16px;
+    line-height: 1.75rem;
+  }
+
+  .explore {
+    height: 15rem;
+    width: 15rem;
+    margin-bottom: 0;
+  }
+
+  .explore h3 {
+    font-size: 32px;
   }
 }
 
 @media (min-width: 1200px) {
   .home {
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    width: 100%;
+    padding: 2.5rem 0 0 3.4rem;
     background: url(../assets/home/background-home-desktop.jpg) no-repeat center;
     background-size: cover;
+  }
+
+  main {
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  main h1 {
+    font-size: 28px;
+  }
+
+  main h2 {
+    margin: 4.5rem 0 2rem;
+    font-size: 150px;
+  }
+
+  main p {
+    font-size: 18px;
+    line-height: 2rem;
+  }
+
+  .space {
+    width: 30.5rem;
+  }
+
+  .explore {
+    height: 17rem;
+    width: 17rem;
+    margin: 0;
+  }
+
+  .explore:hover::after {
+    content: "";
+    display: block;
+    width: 18rem;
+    height: 18rem;
+    border-radius: 50%;
+    opacity: 10%;
+    background-color: hsl(0, 0%, 100%);
+    transform: scale(1.4);
+    position: absolute;
   }
 }
