Added react router and fetching page details from json file

--- a/src/components/UI/Header.module.css
+++ b/src/components/UI/Header.module.css
@@ -74,7 +74,7 @@ header .line {
     font-family: "Barlow Condensed", sans-serif;
   }
 
-  header nav ul li:nth-of-type(2)::after {
+  a.active::after {
     content: "";
     display: block;
     width: 80%;
