--- a/src/pages/Technology.module.css
+++ b/src/pages/Technology.module.css
@@ -1,16 +1,32 @@
 .technology {
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   padding: 1.5rem;
   background: url(../assets/technology/background-technology-mobile.jpg)
     no-repeat center;
   background-size: cover;
 }
 
+.technology_main {
+  margin-top: 1.5rem;
+  color: hsl(0, 0%, 100%);
+  text-align: center;
+}
+
+.technology_main h1 {
+  margin: 0 2.9rem 0 0;
+  letter-spacing: 0.17rem;
+  font-size: 16px;
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: normal;
+  text-transform: uppercase;
+  text-align: right;
+}
+
 @media (min-width: 768px) {
   .technology {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     padding: 0;
     background: url(../assets/technology/background-technology-tablet.jpg)
       no-repeat center;
@@ -21,7 +37,7 @@
 @media (min-width: 1200px) {
   .technology {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     padding: 2.5rem 0 0 3.4rem;
     background: url(../assets/technology/background-technology-desktop.jpg)
       no-repeat center;
