--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,13 +1,13 @@
 .home {
   min-height: 100vh;
   width: 100%;
-  padding: 1.5rem;
   background: url(../assets/home/background-home-mobile.jpg) no-repeat center;
   background-size: cover;
 }
 
 .home_main {
   margin-top: 3rem;
+  padding: 0 1.5rem 1.5rem;
   text-align: center;
 }
 
@@ -48,21 +48,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.explore:hover {
-  cursor: pointer;
-}
-
-.explore:hover::after {
-  content: "";
-  display: block;
-  width: 18rem;
-  height: 18rem;
-  border-radius: 50%;
-  background-color: hsla(0, 0%, 100%, 0.1);
-  transform: scale(1.4);
-  position: absolute;
 }
 
 .explore h3 {
@@ -152,5 +137,20 @@
     height: 17rem;
     width: 17rem;
     margin: 0;
+  }
+
+  .explore:hover {
+    cursor: pointer;
+  }
+
+  .explore:hover::after {
+    content: "";
+    display: block;
+    width: 18rem;
+    height: 18rem;
+    border-radius: 50%;
+    background-color: hsla(0, 0%, 100%, 0.1);
+    transform: scale(1.4);
+    position: absolute;
   }
 }
