--- a/src/components/UI/Header.module.css
+++ b/src/components/UI/Header.module.css
@@ -1,5 +1,6 @@
 header {
   width: 100%;
+  padding: 1.5rem 1.5rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -34,6 +35,7 @@ header .line {
 @media (min-width: 768px) {
   header {
     height: 6rem;
+    padding: 0;
   }
 
   .logo {
