--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -43,21 +43,17 @@
   height: 9.4rem;
   width: 9.4rem;
   border-radius: 50%;
+  letter-spacing: 0.0625rem;
+  font-size: 20px;
+  color: hsl(230, 35%, 7%);
+  font-weight: normal;
+  font-family: "Bellefair", sans-serif;
   background-color: hsl(0, 0%, 100%);
-  background-clip: border-box;
+  text-transform: uppercase;
+  /* background-clip: border-box; */
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.explore h3 {
-  margin: 0;
-  font-size: 20px;
-  letter-spacing: 0.0625rem;
-  color: hsl(230, 35%, 7%);
-  text-transform: uppercase;
-  font-weight: normal;
-  font-family: "Bellefair", sans-serif;
 }
 
 @media (min-width: 768px) {
@@ -92,9 +88,6 @@
     height: 15rem;
     width: 15rem;
     margin-bottom: 0;
-  }
-
-  .explore h3 {
     font-size: 32px;
   }
 }
